Update Spark build instruction